# cute-computer-automation-skill

./: .gitignore  README.md  SKILL.md  autogui.py  cute_mcp.py  pyproject.toml  skill_runtime.py
.github/workflows/: release.yml
scripts/: adb_list_devices.py  click.py  drag_or_swipe.py  get_a11y_tree.py  list_apps.py  mouse_move.py  press_key.py  run_app.py  select_device.py  take_screenshot.py  type_text.py  wait.py
