[project]
name = "cute_mcp"
version = "0.1.0"
description = "MCP server for local and Android GUI automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pyautogui",
    "adbutils",
    "pillow",
    "uiautomator2",
    "uiautomation; sys_platform == 'win32'",
    "atomacos; sys_platform == 'darwin'",
    "dogtail; sys_platform == 'linux'",
]

[project.scripts]
cute_mcp = "cute_mcp:mcp.run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
